add add read more button

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -81,6 +84,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -92,6 +98,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -103,6 +112,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
     </section>
     <section class="notices" id="entertainment">
@@ -117,6 +129,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -128,6 +143,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -139,6 +157,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -150,6 +171,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -161,6 +185,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -172,6 +199,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -183,6 +213,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -194,6 +227,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
     </section>
     <section class="notices" id="culture">
@@ -208,6 +244,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -219,6 +258,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -230,6 +272,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -241,6 +286,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
     </section>
     <section class="notices" id="science">
@@ -255,6 +303,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -266,6 +317,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -277,6 +331,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -288,6 +345,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
     </section>
     <section class="notices" id="city">
@@ -302,6 +362,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -313,6 +376,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -324,6 +390,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
       <article>
         <div class="prevImg">
@@ -335,6 +404,9 @@
         <a class="title-notice">Lorem Ipsum </a>
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
+        <div class="btnPosition">
+          <a class="readMore" href="#">Leia mais...</a>
+        </div>
       </article>
     </section>
   </section>
