--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readSport" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -85,7 +85,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readSport" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -99,7 +99,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readSport readSport" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -113,7 +113,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readSport" href="#">Leia mais...</a>
         </div>
       </article>
     </section>
@@ -130,7 +130,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -144,7 +144,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -158,7 +158,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -172,7 +172,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -186,7 +186,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -200,7 +200,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -214,7 +214,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -228,7 +228,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readEntertainment" href="#">Leia mais...</a>
         </div>
       </article>
     </section>
@@ -245,7 +245,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCulture" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -259,7 +259,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCulture" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -273,7 +273,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCulture" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -287,7 +287,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCulture" href="#">Leia mais...</a>
         </div>
       </article>
     </section>
@@ -304,7 +304,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readScience" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -318,7 +318,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readScience" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -332,7 +332,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readScience" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -346,7 +346,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readScience" href="#">Leia mais...</a>
         </div>
       </article>
     </section>
@@ -363,7 +363,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCity" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -377,7 +377,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCity" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -391,7 +391,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCity" href="#">Leia mais...</a>
         </div>
       </article>
       <article>
@@ -405,7 +405,7 @@
         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
         </p>
         <div class="btnPosition">
-          <a class="readMore" href="#">Leia mais...</a>
+          <a class="readMore readCity" href="#">Leia mais...</a>
         </div>
       </article>
     </section>
